define flexbox properiesfor different browsers

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,9 @@ body{
 	font-family: 'Roboto'
 	color:#1b1b1b;
 }
+
+.flexbox-container{
+	display: -ms-flex;
+	display: -webkit-flex;
+	display: flex;
+}
