remove text-decoration from links and define styles for h3 tags

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,3 +10,14 @@ body{
 	display: -webkit-flex;
 	display: flex;
 }
+
+a{
+	text-decoration: none;
+}
+
+h3{
+	font-family: 'impact',
+	font-size:35px;
+	font-weight: 300;
+	margin-bottom: 0;
+}
