--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,3 +27,35 @@ h4{
 	font-size:20px;
 	margin:15px 0 5px;
 }
+
+/*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+					HEADER AND FOOTER
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+
+header{
+	border-bottom: 1px solid #e2e2e2;
+}
+
+header, footer{
+	background: #ffffff;
+	align-items: center;
+	padding:10px;
+	font-family: 'impact';
+}
+
+header .logo, footer .logo{
+	flex-grow:1;
+	height: 22px;
+}
+
+header .logo span, footer .logo span{
+	background:url('/images/logo.png') no-repeat;
+	display: inline-block;
+	width:58px;
+	height: 24px;
+}
+
+footer{
+	background:#1f1f1f;
+	margin-top:30px;
+}
