--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -62,3 +62,12 @@ footer{
 	background:#1f1f1f;
 	margin-top:30px;
 }
+
+.item-slider{
+	height: 700px;
+	background-size:cover !important;
+	background-position:center center;
+	font-family: 'Fjalla One';
+}
+
+
