--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@
 body{
 	margin:0;
 	padding:0;
-	font-family: 'Roboto'
+	font-family: 'Roboto, Fjalla One'
 	color:#1b1b1b;
 }
 
@@ -19,14 +19,14 @@ a{
 }
 
 h3{
-	font-family: 'impact',
+	font-family: 'Fjalla One',
 	font-size:35px;
 	font-weight: 300;
 	margin-bottom: 0;
 }
 
 h4{
-	font-family: 'impact',
+	font-family: 'Fjalla One',
 	font-size:20px;
 	margin:15px 0 5px;
 }
@@ -43,7 +43,7 @@ header, footer{
 	background: #ffffff;
 	align-items: center;
 	padding:10px;
-	font-family: 'impact';
+	font-family: 'Fjalla One';
 }
 
 header .logo, footer .logo{
